# NoteLab

./: CMakeLists.txt  Collezioni.cpp  Collezioni.h  Note.cpp  Note.h  NoteCounter.h  Observer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tests.cpp
